--- a/applications/Supercar-Trader/src/main/resources/db/connection.properties
+++ b/applications/Supercar-Trader/src/main/resources/db/connection.properties
@@ -1,3 +1,3 @@
-db.url=jdbc:mysql://localhost:3306/supercars
+db.url=jdbc:mysql://localhost:3306/supercars?verifyServerCertificate=false&useSSL=false
 db.user=root
 db.password=Welcome1!
